banner modified and final

--- a/index.html
+++ b/index.html
@@ -12,30 +12,26 @@
         rel="stylesheet">
     <link rel="stylesheet" href="website design/style.css">
 </head>
-
 <body>
-    <header class="banner">
-        <div class="banner-details">
-            <div class="banner-title">
-                <h1 class="title">Let's make beautiful flowers a part of your life.</h1>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page
-                    when
-                    looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                    distribution of letters.</p>
+    <header>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
                 <button class="btn-primary">Shop Now</button>
             </div>
-            <div class="banner-img">
-                <img class="img" src="images/pngwing 10.png">
-            </div>
-            
+            <img class="bn-pic" src="images/pngwing 10.png" alt="">
         </div>
     </header>
     <main>
-
+        <section class="featured">
+            <h3 class="section-title">Our Featured Flowers</h3>
+            <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </section>
+        <section class="featured-pic">
+            <img src="images/pngwing 6.png" alt="">
+        </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
 
 </html>
